# emprestimos

./: .gitignore  Dockerfile  docker-compose-desenvolvimento.yml  docker-compose-portainer.yml
docker/: Dockerfile.dev  Dockerfile.prod
emprestimos/: aiodiscord.py  aiotelegram.py  entrypoint.sh  notificador.py  pyproject.toml  requirements.txt
emprestimos/core/: adapters.py  admin.py  apps.py  asgi.py  email_template.py  forms.py  middleware.py  mixins.py  models.py  settings.py  signals.py  urls.py  views.py
emprestimos/core/migrations/: 0001_initial.py  0002_parcela_valor_pago.py  0003_bottoken_chatid_notificacao.py  0004_alter_emprestimo_parcelas_and_more.py
emprestimos/core/templates/core/: index.html
emprestimos/core/views/: corefilesviews.py  simpleviews.py
emprestimos/locale/en/LC_MESSAGES/: django.po
emprestimos/locale/es/LC_MESSAGES/: django.po
emprestimos/templates/: 400.html  401.html  403.html  404.html  405.html  415.html  500.html  502.html  base.html
emprestimos/templates/account/: email.html  email_confirm.html  login.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html  verified_email_required.html
emprestimos/templates/debug/: cache_admin.html  cache_dashboard.html
emprestimos/templates/parciais/: _btn_voltar.html  _btn_voltar_args.html  _erros_forms.html  _footer.html  _head.html  _header.html  _messages.html  _pagination.html
emprestimos/utils/: atraso_detalhado.py  formatar_dinheiro.py  search_mixin.py
(+9 files in other folders)
