[project]
name = "emprestimos"
version = "0.1.0"
description = "Sistema de Empréstimos com Django"
dependencies = [
    "Django>=6.0.2,<6.3",
    "uvicorn[standard]>=0.40.0",
    "httptools>=0.7.1",
    "starlette>=0.52.1",
    "django-allauth>=65.14.0",
    "python-magic>=0.4.27",
    "pillow>=12.1.0",
    "whitenoise>=6.11.0",
    "django-import-export>=4.4.0",
    "httpx[http2]>=0.28.1",
    "uvloop>=0.22.1",
    "aiosqlite>=0.22.1",
    "python-dateutil>=2.9.0.post0",
    "aiofiles>=25.1.0",
]
requires-python = ">=3.14"
